--- a/manifest.json
+++ b/manifest.json
@@ -8,9 +8,9 @@
       "type": "image/x-icon"
     },
     {
-      "src": "https://raw.githubusercontent.com/Jooelg/E-CommerceImg/main/ProductImg/GutiPage.png",
+      "src": "logo192.png",
       "type": "image/png",
-      "sizes": "342x192"
+      "sizes": "192x192"
     },
     {
       "src": "logo512.png",
